Fix compile on CentOS 7.7

Explicitly open the std namespace to specialize std::hash.

BUG: 412954