src/analyze/gui/parser.cpp
@@ -33,13 +33,16 @@
 using namespace std;
 
 #if QT_VERSION < QT_VERSION_CHECK(5, 14, 0)
-template<>
-struct std::hash<QString> {
+namespace std {
+template <>
+struct hash<QString>
+{
     std::size_t operator()(const QString &v) const noexcept
     {
         return qHash(v);
     }
 };
+}
 #endif
 
 // Only use this hash when filling in the cache
